--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head><iframe src=”https://asharpmusicnig.github.io/highcharts-scatter-csv” width=”90%” height=350></iframe>
+<head>
   <title>NEWLIFE-Highcharts-scatter-csv</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
